--- a/index.html
+++ b/index.html
@@ -4,11 +4,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ada Tech</title>
+  <title>HTML Básico | Ada Tech</title>
 </head>
 
 <body>
-
+  <!-- Principais Tags -->
+  <header>
+    <h1>Cabeçalho 1</h1>
+    <hr>
+    <h2>Cabeçalho 2</h2>
+    <hr>
+    <h3>Cabeçalho 3</h3>
+    <hr>
+    <h4>Cabeçalho 4</h4>
+    <hr>
+    <h5>Cabeçalho 5</h5>
+    <hr>
+    <h6>Cabeçalho 6</h6>
+    <br>
+    <hr>
+  </header>
+  <main>
+    <p>
+      Parágrafo
+    </p>
+    <p>Link Abaixo:</p>
+    <a href="https://ada.tech" target="_blank">Ada Tech</a>
+    <hr>
+    <p>Imagem abaixo:</p>
+    <img src="./imgs/FotoPerfil.jpg" alt="Foto de Perfil do Gustavo" width="200px">
+    <br>
+    <hr>
+    <!-- Lista não numeradas -->
+    <ul>
+      <li>Primeiro Item</li>
+      <li>Segundo Item</li>
+    </ul>
+    <hr>
+    <!-- Lista numerada -->
+    <ol>
+      <li>Primeiro Item</li>
+      <li>Segundo Item</li>
+    </ol>
+    <hr>
+    <!-- Div, span -->
+    <div>Isso aqui é uma div</div>
+    <span>Isso aqui é um span</span>
+    <hr>
+    <!-- Strong -->
+    <p><strong>Negrito</strong></p>
+    <hr>
+    <!-- Itálico -->
+    <p><em>Itálico</em></p>
+    <hr>
+  </main>
 </body>
 
 </html>
