Add structure html

--- a/secundario.html
+++ b/secundario.html
@@ -4,11 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Segundo Arquivo</title>
+  <title>Segundo Arquivo HTML</title>
 </head>
 
 <body>
-
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a href="#inicio" target="_blank">Início</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main id="inicio">
+    <h1>Título</h1>
+    <section id="about-me"></section>
+    <section id="my-projects"></section>
+  </main>
+  <aside></aside>
+  <figure>
+    <img src="" alt="">
+  </figure>
+  <footer>
+    <p>Rodapé &copy; Gustavo Mendes</p>
+  </footer>
 </body>
 
 </html>
