Add forms and tables

--- a/index.html
+++ b/index.html
@@ -57,6 +57,37 @@
     <!-- Itálico -->
     <p><em>Itálico</em></p>
     <hr>
+    <!-- Tabelas -->
+    <h1>Tabelas</h1>
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Nome</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Gustavo</td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <hr>
+    <!-- Formulário  -->
+    <h1>Formulário</h1>
+    <form>
+      <input type="text" placeholder="Nome" name="nome" id="nome">
+      <br>
+      <input type="password" placeholder="Senha" name="senha" id="senha">
+      <br>
+      <textarea name="message" id="message" cols="50" rows="20" placeholder="Mensagem"></textarea>
+      <br>
+      <select name="tecnologias" id="tecnologias">
+        <option disabled selected>Selecione</option>
+        <option value="js">Javascript</option>
+        <option value="html">HTML</option>
+      </select>
+    </form>
   </main>
 </body>
 
