Add a link html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <!-- Principais Tags -->
   <header>
+    <a href="secundario.html">Secundária</a>
     <h1>Cabeçalho 1</h1>
     <hr>
     <h2>Cabeçalho 2</h2>
