--- a/secundario.html
+++ b/secundario.html
@@ -13,6 +13,7 @@
       <ul>
         <li>
           <a href="#inicio" target="_blank">Início</a>
+          <a href="index.html">Primária</a>
         </li>
       </ul>
     </nav>
