Add structure css

--- a/aula-css/index.html
+++ b/aula-css/index.html
@@ -5,10 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aula CSS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+  <header></header>
+  <main>
+    <h1>CSS</h1>
+    <section id="principais-estilos">
+      <h2>Principais Estilos CSS</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, tempora natus modi explicabo doloremque animi totam aut perspiciatis iusto inventore quisquam minus ex laborum obcaecati id, similique alias vel eos.</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, fugit ullam. Adipisci minus expedita nam, quaerat ipsum eius sapiente vel accusamus vero assumenda fugit deleniti, eaque totam eos ab asperiores.</p>
+    </section>
+    <section id="flexbox">
+      <h2>Flexbox</h2>
+      <p>Seção sobre flexbox.</p>
+      <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </section>
+    <section id="grid-layout">
+      <div class="container-grid">
+        <div class="caixa"></div>
+        <div class="caixa"></div>
+        <div class="caixa"></div>
+        <div class="caixa"></div>
+        <div class="caixa"></div>
+        <div class="caixa"></div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
