Add nav in header

--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -9,7 +9,22 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <nav id="navbar">
+      <a href="#" class="nav-brand">Gustavo Mendes</a>
+      <ul class="class-list">
+        <li class="nav-item">
+          <a href="#">Works</a>
+        </li>
+        <li class="nav-item">
+          <a href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <main></main>
   <footer></footer>
 </body>
