--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav id="navbar">
       <a href="#" class="nav-brand">Gustavo Mendes</a>
-      <ul class="class-list">
+      <ul class="nav-list">
         <li class="nav-item">
           <a href="#">Works</a>
         </li>
