--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -28,7 +28,16 @@
       </ul>
     </nav>
   </header>
-  <main></main>
+  <main>
+    <section class="banner">
+      <div class="banner-content">
+        <h1 class="banner-content-title">Hi, I am Gustavo, Full Stack Developer</h1>
+        <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, ajudando pessoas e principalmente usando tecnologia. Faço faculdade de sistemas de informação na UNIRON.</p>
+        <button class="banner-content-btn">Download Resume</button>
+      </div>
+      <img src="https://avatars.githubusercontent.com/u/150175535?v=4" alt="Gustavo Mendes" class="banner-image">
+    </section>
+  </main>
   <footer></footer>
 </body>
 
