--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -31,7 +31,7 @@
   <main>
     <section id="banner">
       <div class="banner-content">
-        <h1 class="banner-content-title">Hi, I am Gustavo, <br> Full Stack Developer</h1>
+        <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
         <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, <br> ajudando pessoas e principalmente usando tecnologia. Faço faculdade de sistemas de informação na UNIRON.</p>
         <button class="banner-content-btn">Download Resume</button>
       </div>
