--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -33,7 +33,7 @@
       <div class="banner-content">
         <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
         <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, <br> ajudando pessoas e principalmente usando tecnologia. Faço faculdade de sistemas de informação na UNIRON.</p>
-        <button class="banner-content-btn">Download Resume</button>
+        <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
       <img src="img/IAFOTO.jpg" width="600" height="450" alt="Gustavo Mendes" class="banner-image">
     </section>
