--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -32,10 +32,10 @@
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
-        <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, <br> ajudando pessoas e principalmente usando tecnologia. Faço faculdade de sistemas de informação na UNIRON.</p>
+        <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, <br> ajudando pessoas e principalmente usando tecnologia. Faço faculdade de Sistemas de <br>Informação na Faculdade UNIRON.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
-      <img src="img/IAFOTO.jpg" width="480" height="450" alt="Gustavo Mendes" class="banner-image">
+      <img src="img/IAFOTO.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
     </section>
   </main>
   <footer></footer>
