--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -32,7 +32,8 @@
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
-        <p class="banner-content-subtitle">Sou apaixonado por programação desde pequeno e sou viciado em resolver problemas, <br> ajudando pessoas e principalmente usando tecnologia. Faço faculdade de Sistemas de <br>Informação na Faculdade UNIRON.</p>
+        <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to <br> solving problems, helping people and especially using technology. I study IT <br> Systems
+          Information at UNIRON College.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
       <img src="img/IAFOTO.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
