--- a/projeto-pagina-estatica/index.html
+++ b/projeto-pagina-estatica/index.html
@@ -36,7 +36,7 @@
           Information at UNIRON College.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
-      <img src="img/IAFOTO.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
+      <img src="img/IA3.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
     </section>
   </main>
   <footer></footer>
