--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -32,7 +32,7 @@
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
-        <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to <br> solving problems, helping people and especially using technology. I study IT <br> Systems
+        <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to solving problems, helping people and especially using technology. I study IT Systems
           Information at UNIRON College.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
