--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -20,6 +20,9 @@
           <a href="#">Works</a>
         </li>
         <li class="nav-item">
+          <a href="#">About</a>
+        </li>
+        <li class="nav-item">
           <a href="#">Blog</a>
         </li>
         <li class="nav-item">
