--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -17,16 +17,16 @@
       <a href="#" class="nav-brand">Gustavo Mendes</a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="#">Works</a>
+          <a href="#works">Works</a>
         </li>
         <li class="nav-item">
-          <a href="#">About</a>
+          <a href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a href="#">Blog</a>
+          <a href="#blog">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="#">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </nav>
