--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -34,7 +34,7 @@
   <main>
     <section id="banner">
       <div class="banner-content">
-        <h1 class="banner-content-title">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
+        <h1 class="banner-content-title" id="about">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
         <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to solving problems, helping people and especially using technology. I study IT Systems
           Information at UNIRON College.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
