update footer text

--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -42,7 +42,7 @@
       <img src="img/IA3.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
     </section>
   </main>
-  <footer>&copy; Gustavo Mendes</footer>
+  <footer>&copy; Todos os direitos reservados.</footer>
 </body>
 
 </html>
