--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav id="navbar">
-      <a href="#" class="nav-brand">Gustavo Mendes</a>
+      <a href="#" class="nav-brand">Portfólio</a>
       <ul class="nav-list">
         <li class="nav-item">
           <a href="#works">Works</a>
