--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <!-- Header -->
   <header>
     <nav id="navbar">
       <a href="#" class="nav-brand">Portfólio</a>
@@ -33,6 +34,7 @@
       </ul>
     </nav>
   </header>
+  <!-- Main -->
   <main>
     <section id="banner">
       <div class="banner-content">
@@ -44,6 +46,7 @@
       <img src="img/IA3.jpg" width="420" height="450" alt="Gustavo Mendes" class="banner-image">
     </section>
   </main>
+  <!-- Footer -->
   <footer>&copy; Todos os direitos reservados.</footer>
 </body>
 
