add class header main and footer

--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Header -->
-  <header>
+  <header class="header">
     <nav id="navbar">
       <a href="#" class="nav-brand">Portfólio</a>
       <ul class="nav-list">
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <!-- Main -->
-  <main>
+  <main class="main">
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title" id="about">Hi, I am Gustavo, <br> <span>Full Stack Developer</span></h1>
@@ -47,7 +47,7 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer>&copy; Todos os direitos reservados.</footer>
+  <footer class="footer">&copy; Todos os direitos reservados.</footer>
 </body>
 
 </html>
