--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Aula 06 - Javascript</h1>
-  <script src="script.js"></script>
+  <script src="repeticao.js"></script>
 </body>
 
 </html>
