--- a/fetch-api/index.html
+++ b/fetch-api/index.html
@@ -7,7 +7,7 @@
   <title>API</title>
 </head>
 
-<body>
+<body style="background-color: #232323; color: #fff;">
   <h1>ViaCep</h1>
   <script src="js/index.js"></script>
 </body>
