--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -47,7 +47,7 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer class="footer">&copy; Todos os direitos reservados.</footer>
+  <footer class="footer">&copy; All rights reserved.</footer>
 </body>
 
 </html>
