--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -16,6 +16,7 @@
 <body>
   <!-- Header -->
   <header class="header">
+    <!-- Nav -->
     <nav id="navbar">
       <a href="#" class="nav-brand">Portfólio</a>
       <ul class="nav-list">
