--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -48,6 +48,7 @@
   </main>
   <!-- Footer -->
   <footer class="footer">&copy; All rights reserved.</footer>
+  <script src="main.js"></script>
 </body>
 
 </html>
