--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio</title>
+  <title>Portfólio Gustavo</title>
   <!-- Link CSS -->
   <link rel="stylesheet" href="./styles/style.css">
   <!-- Add Fonts -->
