--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -7,7 +7,7 @@
   <title>Portfólio Gustavo</title>
   <!-- Link CSS -->
   <link rel="stylesheet" href="./styles/style.css">
-  <!-- Add Fonts -->
+  <!-- Add Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
