--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -38,6 +38,7 @@
   </header>
   <!-- Main -->
   <main class="main">
+    <!-- Section Banner -->
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title" id="about">Hi, I am Mendes, <br> <span>Full Stack Developer</span></h1>
