--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -49,7 +49,7 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer class="footer">&copy; All rights reserved.</footer>
+  <footer class="footer">&copy; All rights reserved. Mendes</footer>
   <script src="main.js"></script>
 </body>
 
