--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -42,7 +42,7 @@
       <img src="img/IA3.jpg" width="420" height="450" alt="Foto de Perfil do Gustavo" class="banner-image">
     </section>
   </main>
-  <footer class="footer">&copy; All rights reserved. Mendes</footer>
+  <footer class="footer">&copy; All rights reserved. Gustavo Mendes</footer>
   <script src="main.js"></script>
 </body>
 
