--- a/html-css/projeto-pagina-estatica/index.html
+++ b/html-css/projeto-pagina-estatica/index.html
@@ -36,7 +36,7 @@
     <section id="banner">
       <div class="banner-content">
         <h1 class="banner-content-title" id="about">Hi, I am Gustavo Mendes, <br> <span>Full Stack Developer</span></h1>
-        <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to solving problems, helping people and especially using technology. I study IT Systems Information at UNIRON College.</p>
+        <p class="banner-content-subtitle">I've been passionate about programming since I was little and I'm addicted to solving problems, helping people and especially using technology. I study IT Systems Information at UNIRON College.I am one of those who believe that effort beats talent, so with a lot of discipline and dedication I will achieve all my goals.</p>
         <button class="banner-content-btn">DOWNLOAD RESUME</button>
       </div>
       <img src="img/IA3.jpg" width="420" height="450" alt="Foto de Perfil do Gustavo" class="banner-image">
